discovery-frontend/src/assets/css/metatron/component/component.table.css
/* ... */
table.ddp-table-listview tbody tr td em[class*="ddp-icon-type-"] {position:relative; left:0; top:0; margin:0;}

/**************************************************************
	매니지먼트 모니터링 리스트
**************************************************************/
.ddp-fix-size {position:relative; height:246px; box-sizing:border-box;}
.ddp-fix-size .ddp-nodata {display:table; width:100%; height:215px; padding:90px 0 0 0; text-align:center; background-color:#fff;  font-size:18px; color:#d0d1db; border:1px solid #ddd; border-top:none; box-sizing:border-box;}

/**************************************************************
	매니지먼트 메타데이터 상세
**************************************************************/
.ddp-ui-preview-contents table.ddp-table-form.ddp-table-details tbody tr:nth-child(odd) td.ddp-disabled:hover {background-color:#fafafa !important;}
table.ddp-table-type2 thead tr th .ddp-th-long .ddp-th-icons {float:right;}
table.ddp-table-type2 thead tr th .ddp-th-long .ddp-th-icons .ddp-wrap-hover-info {float:left; padding:5px 0 0 0; font-size:0px;}

table.ddp-table-type2 thead tr th .ddp-th-long .ddp-th-icons [class*="ddp-icon-array"] {top:0;}

/**************************************************************
	Table tooltip
**************************************************************/
table tbody tr td .ddp-txt-long:hover + .ddp-ui-tooltip-info {display:block; top:100%; left:0; min-width:50px;max-width:100%; white-space:normal; box-sizing:border-box;}
table tbody tr td .ddp-txt-long:hover + .ddp-ui-tooltip-info .ddp-icon-view-top {left:40px;}

table tbody tr > td .ddp-hover-tooltip:hover + .ddp-ui-tooltip-info {display:block; top:100%; left:-10px; max-width:100%; white-space:normal;}
table tbody tr > td .ddp-hover-tooltip:hover + .ddp-ui-tooltip-info em.ddp-icon-view-top {left:40px; }
table tbody tr > td .ddp-hover-tooltip:hover + .ddp-ui-tooltip-info.ddp-top {bottom:100%; top:inherit;}
table.ddp-table-type3 tbody tr td.ddp-hover-tooltip .ddp-ui-tooltip-info{top:30px; left:10px; right:inherit; max-width:90%;white-space:normal;}
table.ddp-table-type3 tbody tr td.ddp-hover-tooltip .ddp-ui-tooltip-info .ddp-icon-view-top {left:20px; right:inherit;}
table.ddp-table-type3 tbody tr td.ddp-hover-tooltip .ddp-ui-tooltip-info .ddp-scroll {max-height:150px; overflow:auto;}

/**************************************************************
	Table 오름차순
**************************************************************/
em.ddp-icon-array-default2,
em.ddp-icon-array-asc2,
em.ddp-icon-array-des2 {display:inline-block; position:relative; top:-1px; width:19px; height:19px; cursor:pointer; vertical-align: middle;}

em.ddp-icon-array-default2:before,
em.ddp-icon-array-asc2:before,
em.ddp-icon-array-des2:before {display:inline-block; content:''; position:absolute; width:7px; height:9px; background:url(../../../images/icon_array.png) no-repeat; cursor: pointer;}
em.ddp-icon-array-default2:before {top:5px; left:50%;margin-left:-4px;}
em.ddp-icon-array-asc2:before {width:7px; height:4px; top:5px; left:50%; margin-left:-4px;}
em.ddp-icon-array-des2:before {width:7px; height:4px;  top:10px; left:50%; margin-left:-4px; background-position:left -5px;}



/**************************************************************
	더보기 버튼
**************************************************************/
.ddp-box-add-link {padding:10px 0; margin-top:7px; border:1px solid #ddd; background-color:#fff; text-align:center; cursor:pointer;}
.ddp-box-add-link span.ddp-link-type {font-size:13px; color:#90969f;}
.ddp-box-add-link:hover span.ddp-link-type {color:#4b515b; text-decoration: underline;}
.ddp-box-add-link span.ddp-link-type em.ddp-icon-view {display:inline-block; width:7px; height:4px; margin-left:6px; background:url(../../../images/icon_selecview.png) no-repeat; background-position:-35px -7px; vertical-align: middle;}
.ddp-box-add-link:hover span.ddp-link-type em.ddp-icon-view {background-position:left -7px;}

.ddp-box-add-link2 {position:relative; padding:16px 0; margin-top:-1px; border-top:1px solid #b7b9c2; border-bottom:1px solid #b7b9c2; background-color:#fff; text-align:center; cursor:pointer; z-index:1;}
.ddp-box-add-link2 span.ddp-link-type {font-size:13px; color:#90969f;}
.ddp-box-add-link2:hover span.ddp-link-type {color:#4b515b; text-decoration: underline;}
.ddp-box-add-link2 span.ddp-link-type em.ddp-icon-view {display:inline-block; width:7px; height:4px; margin-left:6px; background:url(../../../images/icon_selecview.png) no-repeat; background-position:-35px -7px; vertical-align: middle;}
.ddp-box-add-link2:hover span.ddp-link-type em.ddp-icon-view {background-position:left -7px;}

.ddp-box-add-link3 {position:relative; padding:13px 0; margin-top:-1px; border:1px solid #b7b9c1; background-color:#fff; text-align:center; cursor:pointer; z-index:1;}
.ddp-box-add-link3 span.ddp-link-type {font-size:13px; color:#90969f;}
.ddp-box-add-link3:hover span.ddp-link-type {color:#4b515b; text-decoration: underline;}
.ddp-box-add-link3 span.ddp-link-type em.ddp-icon-view {display:inline-block; width:7px; height:4px; margin-left:6px; background:url(../../../images/icon_selecview.png) no-repeat; background-position:-35px -7px; vertical-align: middle;}
.ddp-box-add-link3:hover span.ddp-link-type em.ddp-icon-view {background-position:left -7px;}

[class*="ddp-box-add-link"].ddp-disabled:before {display:inline-block; content:''; position:absolute; top:0; left:0; right:0; bottom:0; background-color:rgba(255,255,255,0.5); z-index:1; cursor: no-drop;}
[class*="ddp-box-add-link"].ddp-disabled:hover span.ddp-link-type {text-decoration: none; color:#90969f;}
[class*="ddp-box-add-link"].ddp-disabled:hover span.ddp-link-type em.ddp-icon-view {background-position:-35px -7px;}


.ddp-ui-moretype {position:absolute; bottom:0; left:0; right:0; text-align:center;}
.ddp-btn-moretype {display:inline-block; padding:3px 9px; color:#90969f; font-size:12px; text-align:center; background-color:#f6f6f7; border-radius:2px 2px 0 0;}
.ddp-btn-moretype:hover {color:#4b515b;}
/* ... */

